@@ -17,6 +17,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15166: Implement imp.get_tag() using sys.implementation.cache_tag.
+
 - Issue #15210: Catch KeyError when imprortlib.__init__ can't find
   _frozen_importlib in sys.modules, not ImportError.
 
